# pbft-like

./: CMakeLists.txt
include/: client.hpp  node.hpp
src/: client.cpp  main_client.cpp  main_node.cpp  node.cpp
